# agentwrapped

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: gen_demo_card.py
src/agentwrapped/: __init__.py  __main__.py  card.py  cli.py  stats.py  terminal.py
tests/: test_agentwrapped.py
tests/fixtures/: wrapped_a.jsonl  wrapped_b.jsonl
